--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@hono/node-server": "^1.13.7",
     "@hono/zod-openapi": "^0.18.0",
     "hono": "^4.6.12",
+    "hono-pino": "^0.7.0",
+    "pino": "^9.5.0",
+    "stoker": "^1.4.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
