--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "dependencies": {
     "@hono/node-server": "^1.13.7",
     "@hono/zod-openapi": "^0.18.0",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^12.0.1",
     "hono": "^4.6.12",
     "hono-pino": "^0.7.0",
     "pino": "^9.5.0",
+    "pino-pretty": "^13.0.0",
     "stoker": "^1.4.2",
     "zod": "^3.23.8"
   },
