--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "skipLibCheck": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   }
 }
