--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@hono/node-server": "^1.13.7",
     "@hono/zod-openapi": "^0.18.0",
+    "@scalar/hono-api-reference": "^0.5.162",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^12.0.1",
     "hono": "^4.6.12",
