--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "lint": "eslint .",
-    "lint:fix": "npm run lint --fix"
+    "lint:fix": "npm run lint --fix",
+    "test": "LOG_LEVEL=silent vitest"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
@@ -27,6 +28,7 @@
     "@types/node": "^20.11.17",
     "drizzle-kit": "^0.29.1",
     "eslint": "^9.15.0",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "vitest": "^2.1.8"
   }
 }
